register+security config