@@ -9,10 +9,7 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.time.Duration;
 import java.time.Instant;
-import java.util.Collection;
-import java.util.Date;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 @Data
 @Builder
@@ -50,7 +47,11 @@ public class User implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(role.name()));
+        if (role != null) {
+            return role.getAuthorities();
+        } else {
+            return Collections.emptyList(); // or return null, depending on your use case
+        }
     }
 
     @Override
